tests/snapshots/example_control_flow.kem.snap
---
source: tests/common/snapshot_utils.rs
expression: content
---
// Control flow examples
fn count_down(n: i64) {
    // val mut: I64 = n  // TODO: Veltrano doesn't support mutable variables
    // While loop example
    // while (mut > 0) {
    //     println("Countdown: {}", mut)
    //     mut = mut - 1  // TODO: Cannot reassign in Veltrano
    // }
    // Simplified version without mutation
    if n > 0 {
        println!("Starting countdown from {}", n);
    }
    println!("Liftoff!");
}
fn check_number(n: i64) {
    // If-else example
    if n > 0 {
        println!("{} is positive", n);
    }
    else     if n < 0 {
        println!("{} is negative", n);
    }
    else {
        println!("{} is zero", n);
    }
}
fn main() {
    count_down(5);
    println!("");
    check_number(42);
    check_number(-7);
    check_number(0);
}
