tests/snapshots/parse_error_missing_closing_brace.snap
---
source: tests/common/snapshot_utils.rs
expression: "format!(\"{:#}\", error)"
---
1:23: unexpected end of file: Expected Expected '}' after block, found EOF
