tests/snapshots/parse_error_missing_expression.snap
---
source: tests/common/snapshot_utils.rs
expression: "format!(\"{:#}\", error)"
---
1:8: unexpected end of file: Expected expression, found EOF
