tests/snapshots/parse_error_unexpected_token.snap
---
source: tests/common/snapshot_utils.rs
expression: "format!(\"{:#}\", error)"
---
1:12: unexpected end of file: Expected expression, found EOF
