tests/snapshots/type_error_double_own.snap
---
source: tests/common/snapshot_utils.rs
expression: "format!(\"{:#}\", error)"
---
1:8: type error: Cannot use Own<Own<T>>. This creates double ownership.
